<resources>
    <string name="app_name">Pokedex</string>
    <string name="nav_pokedex">Pokedex</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_move_items">Move/Items</string>
    <string name="nav_teams">My teams</string>
    <string name="fl_search">Search pokemon</string>
    <string name="demo_pokemon">Squirtle</string>
    <string name="demo_id_pokemon">#007</string>
    <string name="pokemon_type1">Water</string>
    <string name="pokemon_type2">Poison</string>
    <string name="pokedex">POKÉDEX</string>
    <string name="height">Height</string>
    <string name="species">Species</string>
    <string name="weight">Weight</string>
    <string name="friendShip">Friendship</string>
    <string name="ability">Ability</string>
    <string name="base_stats">Base Stats</string>
    <string name="stat_hp">HP</string>
    <string name="stat_attack">Attack</string>
    <string name="stat_def">Defense</string>
    <string name="sp_atk">SP.Atk</string>
    <string name="sp_def">SP.Def</string>
    <string name="speed">Speed</string>
    <string name="total">Total</string>
    <string name="heightValue">1.70 m</string>
    <string name="weightValue">90.5 kg</string>
    <string name="friendShipValue">80</string>
    <string name="SpeciesValue">Mouse Pokemon</string>
    <string name="abilityValue">Blaze, Solar Power</string>
    <string name="evolution_chain">Evolution Chain</string>
    <string name="Description_pokemon">Đây là phần tiểu sử của Pokemon. Nó sẽ dài khoảng 2-3 dòng gì đó.</string>
    <string name="items">Inventory</string>
    <string name="condition">condition</string>
    <string name="all_items">All Items</string>
    <string name="pokeballs">Pokeballs</string>
    <string name="healing">Healing</string>
    <string name="tm_hm">TM/HM</string>
    <string name="berries">Berries</string>
    <string name="effect_move">The target is attacked with an intense blast of all-consuming fire. This may also leave the target with a burn.</string>
    <string name="moves_list">Moves List</string>
    <string name="save_change">Save</string>
    <string name="unknow">---</string>
    <string name="moves">Moves</string>
    <string name="base_stats_team">BASE STATS</string>
    <string name="loading">Loading...</string>
    <string name="choose_this_move">Choose this move</string>
    <string name="empty_pokemon_n_please_add_pokemon_to_the_team">Empty Pokemon!\nPlease add Pokemon to the team.</string>
    <string name="my_team_0_6">MY TEAM (0/6)</string>
    <string name="explore_pokemon">EXPLORE POKEMON</string>
    <string name="mat_mang">Oops! Snorlax cắn đứt cáp mạng rồi.\nVui lòng bật WiFi để xem chi tiết nhé!</string>
    <string name="qu_c_m_n">Quốc Mẫn</string>
    <string name="anhtoan">anhtoan</string>
</resources>