<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBarTeam"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#E53935"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my_team_0_6"
            android:id="@+id/tvTeamCount"
            android:textColor="#FFCB05"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMyTeam"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBarTeam"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_team" />

    <LinearLayout
        android:id="@+id/layoutEmptyState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvEmptyTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_pokemon_n_please_add_pokemon_to_the_team"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExplorePokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:text="@string/explore_pokemon"
            android:textColor="#2A75BB"
            android:textStyle="bold"
            app:backgroundTint="#FFCB05"
            app:cornerRadius="16dp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_nav"
        app:itemIconTint="@null"
        app:labelVisibilityMode="selected"
        app:menu="@menu/bottom_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>